RESOLVED FIXED240507
AX: Don't create isolated objects from ignored live objects
https://bugs.webkit.org/show_bug.cgi?id=240507
Summary AX: Don't create isolated objects from ignored live objects
Tyler Wilcock
Reported 2022-05-16 22:15:30 PDT
...
Attachments
Patch (5.15 KB, patch)
2022-05-25 12:26 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-05-16 22:15:38 PDT
Tyler Wilcock
Comment 2 2022-05-16 22:20:19 PDT
Tyler Wilcock
Comment 3 2022-05-25 12:26:32 PDT
EWS
Comment 4 2022-05-26 13:19:33 PDT
Committed r294894 (251016@main): <https://commits.webkit.org/251016@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459765 [details].
Note You need to log in before you can comment on or make changes to this bug.